llm integration